kubernetes/hetzner-personal/network/openid-configuration/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openid-configuration
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
